# Mayuri

./: generate_pynacl_key.py  pyproject.toml  restore.py  sample_config.toml
mayuri/: __init__.py  mayuri.py
mayuri/lang/: __init__.py  en.py  id.py
mayuri/plugins/: __init__.py  admin.py  blacklist.py  blacklist_pack.py  blacklist_sticker.py  captcha.py  dev.py  disable.py  filters.py  gemini.py  global_restrict.py  gpt.py  misc.py  stickers.py  sudo.py  welcome.py
mayuri/util/: error.py  filters.py  graph.py  misc.py  string.py  time.py
